# Software_Signing

./: .gitmodules  CMakeLists.txt  README.md  configure.sh  license.txt
data/: inesConfig.ini
data/Certs/: CA_cert.pem
data/Signed_Software_Package/: TestAppRaspberry_1.signature  TestAppRaspberry_1.signature.base64  certificate.crt  manifest.json  openssl.txt
src/: main.c
